# auto-semantic-segmentation

./: README.md  pyproject.toml  requirements.txt
autosemantic/: helpers.py
autosemantic/core/: base_model.py  composed_detection_model.py  embedding_model.py  embedding_ontology.py  grounded_sam.py  grounded_sam_2.py  target_model.py
autosemantic/data/: cvat_loader.py
autosemantic/detection/: caption_ontology.py  detection_base_model.py  detection_ontology.py
